@@ -42,6 +42,7 @@ const struct uuid *ovsdb_storage_get_sid(const struct ovsdb_storage *);
 uint64_t ovsdb_storage_get_applied_index(const struct ovsdb_storage *);
 void ovsdb_storage_get_memory_usage(const struct ovsdb_storage *,
                                     struct simap *usage);
+char *ovsdb_storage_get_error(const struct ovsdb_storage *);
 
 void ovsdb_storage_run(struct ovsdb_storage *);
 void ovsdb_storage_wait(struct ovsdb_storage *);
